testing/framework/resources/Advanced/Failing/mondrian/query6104.q
select product_cat.name2 as c0, product_cat.cap as c1, product_cat.ord as c2 from product_csv as product_csv, product_cat as product_cat, cat as cat where product_cat.cat = cat.cat and product_csv.prod_cat = product_cat.prod_cat and (cat.cat = 1) and UPPER(product_cat.name2) = UPPER('Prod Cat One') group by product_cat.name2, product_cat.cap, product_cat.ord order by product_cat.ord ASC NULLS LAST;
